--- a/README.mb
+++ b/README.mb
@@ -2,7 +2,7 @@
 
 Как его установить?
 
-1. git clone https://github.com/Omletina/dz-portfolio
+1. git clone https://github.com/Omletina/dzv1
 2. npm i
 3. bower i
 4. gulp
